<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/txt_dialog_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/ic_camera_take_photo"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/take_photo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_dialog_choose_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/ic_gallery_image"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/choose_photo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_take_photo" />

        <TextView
            android:id="@+id/txt_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintRight_toRightOf="@+id/txt_dialog_choose_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_choose_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
