<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.techskaud.sampleapp.fragment.forgot_pass.ForgotPassVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:onClick="@{viewModel::onClick}"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forgot"
            app:layout_constraintBottom_toTopOf="@id/gdLoginOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdLoginOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLetsSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="10sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/_212121"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gdLoginOne" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0.02"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/enter_phone"
            android:textColor="@color/_b4b3b3"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/etPhone"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/tvLetsSignIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/viewOne"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/your_phone"
                android:backgroundTint="@color/_86b0dd"
                android:text="@={viewModel.userPhoneNumber}"
                android:inputType="number"
                android:textColor="@color/_acacac"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewOne"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@color/_8f92a1"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/etPhone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/viewTwo"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/viewOne"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/_acacac"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewTwo"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@color/_8f92a1"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="@{viewModel::onClick}"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
            app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>